--- a/skai/styleguide.html
+++ b/skai/styleguide.html
@@ -7,11 +7,223 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Raleway:300i,400|Six+Caps" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:700" rel="stylesheet">
+    <link rel="stylesheet" href="css/styleguide-styles.css">
     <title>SKAI Style Guide</title>
 </head>
+
+<div class="container-fluid">
+    <div class="row">
+        <h1 id="title-text">SKAI Style Guide</h1>
+    </div>
+    <div class="row" id="prepared-by">
+        <p>Prepared by Kat Sanchez</p>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Logo</h2>
+    </div>
+    <div class="row section">
+        <div class="col-2 logo-height">
+            <img src="img/logos/logo-full-color.svg" alt="full color logo" class="logos">
+            <img src="img/logos/logo-wordmark-color.svg" alt="color wordmark logo" class="logos">
+            <img src="img/logos/logo-drone-outline.svg" alt="drone logo" class="logos">
+        </div>
+        <div class="col-2 logo-height">
+            <img src="img/logos/logo-reversed-transparent.svg" alt="full color logo" class="logos">
+            <img src="img/logos/logo-wordmark-reversed-transparent.svg" alt="color wordmark logo" class="logos">
+            <img src="img/logos/logo-drone-outline-reversed-transparent.svg" alt="drone logo" class="logos">
+        </div>
+        <div class="col-2 logo-height">
+            <img src="img/logos/logo-greyscale.svg" alt="full color logo" class="logos">
+            <img src="img/logos/logo-wordmark-black.svg" alt="color wordmark logo" class="logos">
+            <img src="img/logos/logo-drone-outline-greyscale.svg" alt="drone logo" class="logos">
+        </div>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Colors</h2>
+    </div>
+    <div class="row section">
+        <img src="img/colors/EE040E.png" alt="red" class="diamond">
+        <img src="img/colors/000000.png" alt="black" class="diamond">
+        <img src="img/colors/423F45.png" alt="grey" class="diamond">
+        <img src="img/colors/757F94.png" alt="blue" class="diamond">
+        <img src="img/colors/D7AF62.png" alt="gold" class="diamond">
+        <img src="img/colors/F5EFE6.png" alt="white" class="diamond">
+    </div>
+    <div class="row">
+        <h1 class="header-text">Typefaces</h1>
+    </div>
+    <div class="row section">
+        <div class="col-3">
+            <h2 class="cabin">Cabin</h2>
+        </div>
+        <div class="col-6 cabin-copy">
+            <p>
+                This is SKAI's signature font. Used for the logo only.
+            </p>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-3">
+            <h2 class="raleway">Raleway</h2>
+        </div>
+        <div class="col-6 raleway-copy">
+            <p>
+                SKAI's headline font.
+            </p>
+        </div>
+    </div>
+    <div class="row section">
+        <div class="col-3">
+            <h2 class="montserrat">Montserrat</h2>
+        </div>
+        <div class="col-6 montserrat-copy">
+            <p>
+                SKAI's body copy font.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Headings</h2>
+    </div>
+    <div class="row section">
+        <h1 class="heading1">Heading 1</h1>
+    </div>
+    <div class="row section">
+        <h1 class="heading2">Heading 2</h1>
+    </div>
+    <div class="row section">
+        <h1 class="heading3">Heading 3</h1>
+    </div>
+    <div class="row section">
+        <h1 class="heading4">Heading 4</h1>
+    </div>
+    <div class="row section">
+        <h1 class="heading5">Heading 5</h1>
+    </div>
+    <div class="row section">
+        <h1 class="heading6">Heading 6</h1>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Paragraph Style</h2>
+    </div>
+    <div class="row section">
+        <div class="col-6">
+            <p class="body-text">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignis
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Links</h2>
+    </div>
+    <div class="col section">
+        <a href="#">Link</a>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Buttons</h2>
+    </div>
+    <div class="row section">
+        <div class="col">
+            <img src="img/buttons/book-button.png" alt="book button">
+        </div>
+        <div class="col">
+            <img src="img/buttons/submit-button.png" alt="submit button">
+        </div>
+        <div class="col">
+            <img src="img/buttons/check-flights-button.png" alt="check flights button">
+        </div>
+        <div class="col">
+            <img src="img/buttons/sign-in-button.png" alt="sign in button">
+        </div>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Icons</h2>
+    </div>
+    <div class="row section">
+        <div class="col">
+            <img src="img/icons/drone-outline-icon.svg" alt="drone icon" class="icons">
+        </div>
+        <div class="col">
+            <img src="img/icons/facebook-icon.svg" alt="facebook" class="icons">
+        </div>
+        <div class="col">
+            <img src="img/icons/instagram-icon.svg" alt="instagram" class="icons">
+        </div>
+        <div class="col">
+            <img src="img/icons/twitter-icon.svg" alt="twitter" class="icons">
+        </div>
+        <div class="col">
+            <img src="img/icons/location-icon.svg" alt="location" class="icons">
+        </div>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Block Quotes</h2>
+    </div>
+    <div class="row section">
+        <blockquote class="blockquote text-right">
+            <p class="mb-0 raleway-italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <footer class="blockquote-footer">Kat Sanchez in <cite title="SKAI Guide">SKAI Guide</cite></footer>
+        </blockquote>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Navigation</h2>
+    </div>
+    <div class="row section">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Drone Info</a>
+                    <a class="dropdown-item" href="#">FAQs</a>
+                    <a class="dropdown-item" href="#">Safety & Warnings</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">SKAI Entertainment</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sign In</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Favicon</h2>
+    </div>
+    <div class="row section">
+        <img src="img/favicon/favicon-lg.svg" alt="large favicon" class="lg-favi">
+        <img src="img/favicon/favicon-md.svg" alt="medium favicon" class="md-favi">
+        <img src="img/favicon/favicon-sm.svg" alt="small favicon" class="sm-favi">
+    </div>
+    <div class="row">
+        <h2 class="header-text">Unordered List</h2>
+    </div>
+    <div class="row section">
+        <ul>
+            <li>Bullet 1</li>
+            <li>Bullet 2</li>
+            <li>Bullet 3</li>
+        </ul>
+
+    </div>
+    <div class="row">
+        <h2 class="header-text">Forms</h2>
+    </div>
+    <div class="row">
+        <h2 class="header-text">Image Style</h2>
+    </div>
+    <div class="row section">
+        <img src="img/image-style.png" alt="image styles">
+    </div>
+</div>
+
 <body>
-<h1>SKAI Style Guide</h1>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
