--- a/skai/index.html
+++ b/skai/index.html
@@ -7,14 +7,154 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Six+Caps" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
-    <title>Hello, world!</title>
+    <title>SKAI : Passenger Drone Travel</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<div class="container-fluid big-banner full-width">
+    <div class="container-fluid header pb-2 text-center">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <img src="img/logos/home-logo.svg" alt="Home Logo" class="home-logo mt-4 mb-4">
+            </div>
+        </div>
+        <!-- The overlay -->
+        <div id="myNav" class="overlay">
+            <div class="overlay-logo mt-4">
+                <img src="img/logos/home-logo.svg" alt="Home Logo" class="home-logo mt-4 mb-4">
+            </div>
+            <!-- Button to close the overlay navigation -->
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+            <!-- Overlay content -->
+            <div class="container">
+                <div class="overlay-content">
+                    <a href="#">ABOUT</a>
+                    <a href="#">DRONES</a>
+                    <a href="#">FLIGHTS</a>
+                    <a href="#">SKAI LIVE</a>
+                    <a href="#">FAQ</a>
+                    <a href="#">SIGN IN</a>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Use any element to open/show the overlay navigation menu -->
+        <span onclick="openNav()">MENU</span>
+    </div>
+
+    <div class="container-fluid full-width" style="height: 600px;">
+        <div class="mb-5">
+            <!-- multistep form -->
+            <form id="msform">
+                <!-- progressbar -->
+                <ul id="progressbar">
+                    <li class="active">Account Setup</li>
+                    <li>Social Profiles</li>
+                    <li>Personal Details</li>
+                </ul>
+                <!-- fieldsets -->
+                <fieldset>
+                    <h2 class="fs-title">Create your account</h2>
+                    <h3 class="fs-subtitle">Step 1</h3>
+                    <input type="text" name="email" placeholder="Email" />
+                    <input type="password" name="pass" placeholder="Password" />
+                    <input type="password" name="cpass" placeholder="Confirm Password" />
+                    <input type="button" name="next" class="next action-button" value="Next" />
+                </fieldset>
+                <fieldset>
+                    <h2 class="fs-title">Social Profiles</h2>
+                    <h3 class="fs-subtitle">Your presence on the social network</h3>
+                    <input type="text" name="twitter" placeholder="Twitter" />
+                    <input type="text" name="facebook" placeholder="Facebook" />
+                    <input type="text" name="instagram" placeholder="Instagram" />
+                    <input type="button" name="previous" class="previous action-button" value="Previous" />
+                    <input type="button" name="next" class="next action-button" value="Next" />
+                </fieldset>
+                <fieldset>
+                    <h2 class="fs-title">Personal Details</h2>
+                    <h3 class="fs-subtitle">We will never sell it</h3>
+                    <input type="text" name="fname" placeholder="First Name" />
+                    <input type="text" name="lname" placeholder="Last Name" />
+                    <input type="text" name="phone" placeholder="Phone" />
+                    <textarea name="address" placeholder="Address"></textarea>
+                    <input type="button" name="previous" class="previous action-button" value="Previous" />
+                    <input type="submit" name="submit" class="submit action-button" value="Submit" />
+                </fieldset>
+            </form>
+        </div>
+    </div>
+        <div class="d-flex justify-content-center header">
+            <div class="row">
+                <div class="col mt-4 mb-4">
+                    <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card-body">
+                            <h3 class="card-title">Drone Safety</h3>
+                            <p class="card-text">We know you probably have some questions about drone safety and regulations. Get your questions answered.</p>
+                            <button type="button" class="btn btn-light">More Info</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mt-4 mb-4">
+                    <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card-body">
+                            <h3 class="card-title">Drone Levels</h3>
+                            <p class="card-text">We offer different classes of drones to suit the price range of all our clients. See what we have to offer you.</p>
+                            <button type="button" class="btn btn-light">More Info</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mt-4 mb-4">
+                    <div class="card text-white bg-dark" style="width: 18rem;">
+                        <div class="card-body">
+                            <h3 class="card-title">Drone FAQ</h3>
+                            <p class="card-text">So you've browsed our entire website but you still have questions. Skip to SKAI's most commonly asked questions.</p>
+                            <button type="button" class="btn btn-light">More Info</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="container-fluid header pb-2">
+        <div class="row footer">
+            <div class="col-sm text-center pt-4">
+                <ul class="list-inline">
+                    <li class="text-uppercase">Links</li>
+                    <li><a href="#" class="footer-links">About</a></li>
+                    <li><a href="#" class="footer-links">Drones</a></li>
+                    <li><a href="#" class="footer-links">Flights</a></li>
+                    <li><a href="#" class="footer-links">SKAI Live</a></li>
+                    <li><a href="#" class="footer-links">FAQ</a></li>
+                    <li><a href="#" class="footer-links">Sign In</a></li>
+                </ul>
+            </div>
+            <div class="col-sm text-center">
+                <img src="img/logos/home-logo.svg" alt="Home Logo" class="home-logo mt-4 mb-4">
+            </div>
+            <div class="col-sm">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
 
 <!-- Optional JavaScript -->
+
+<script src="js/functions.js"></script>
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
