--- a/skai/index.html
+++ b/skai/index.html
@@ -32,7 +32,7 @@
 
             <!-- Overlay content -->
             <div class="container">
-                <div class="overlay-content">
+                <div class="overlay-content header-txt">
                     <a href="#">ABOUT</a>
                     <a href="#">DRONES</a>
                     <a href="#">FLIGHTS</a>
@@ -45,7 +45,7 @@
         </div>
 
         <!-- Use any element to open/show the overlay navigation menu -->
-        <span onclick="openNav()">MENU</span>
+        <span onclick="openNav()" class="header-txt">MENU</span>
     </div>
 
     <div class="container-fluid full-width" style="height: 600px;">
@@ -89,12 +89,12 @@
             </form>
         </div>
     </div>
-        <div class="d-flex justify-content-center header">
+        <div class="justify-content-center header">
             <div class="row">
                 <div class="col mt-4 mb-4">
                     <div class="card text-white bg-dark" style="width: 18rem;">
                         <div class="card-body">
-                            <h3 class="card-title">Drone Safety</h3>
+                            <h3 class="card-title header-txt">Drone Safety</h3>
                             <p class="card-text">We know you probably have some questions about drone safety and regulations. Get your questions answered.</p>
                             <button type="button" class="btn btn-light">More Info</button>
                         </div>
@@ -103,7 +103,7 @@
                 <div class="col mt-4 mb-4">
                     <div class="card text-white bg-dark" style="width: 18rem;">
                         <div class="card-body">
-                            <h3 class="card-title">Drone Levels</h3>
+                            <h3 class="card-title header-txt">Drone Levels</h3>
                             <p class="card-text">We offer different classes of drones to suit the price range of all our clients. See what we have to offer you.</p>
                             <button type="button" class="btn btn-light">More Info</button>
                         </div>
@@ -112,7 +112,7 @@
                 <div class="col mt-4 mb-4">
                     <div class="card text-white bg-dark" style="width: 18rem;">
                         <div class="card-body">
-                            <h3 class="card-title">Drone FAQ</h3>
+                            <h3 class="card-title header-txt">Drone FAQ</h3>
                             <p class="card-text">So you've browsed our entire website but you still have questions. Skip to SKAI's most commonly asked questions.</p>
                             <button type="button" class="btn btn-light">More Info</button>
                         </div>
@@ -136,7 +136,7 @@
             <div class="col-sm text-center">
                 <img src="img/logos/home-logo.svg" alt="Home Logo" class="home-logo mt-4 mb-4">
             </div>
-            <div class="col-sm">
+            <div class="col-sm text-center">
                     <a href="#" class="fa fa-facebook"></a>
                     <a href="#" class="fa fa-twitter"></a>
                     <a href="#" class="fa fa-instagram"></a>
