--- a/skai/index.html
+++ b/skai/index.html
@@ -89,10 +89,10 @@
             </form>
         </div>
     </div>
-        <div class="justify-content-center header">
+        <div class="header">
             <div class="row">
                 <div class="col mt-4 mb-4">
-                    <div class="card text-white bg-dark" style="width: 18rem;">
+                    <div class="mx-auto card text-white bg-dark" style="width: 18rem;">
                         <div class="card-body">
                             <h3 class="card-title header-txt">Drone Safety</h3>
                             <p class="card-text">We know you probably have some questions about drone safety and regulations. Get your questions answered.</p>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col mt-4 mb-4">
-                    <div class="card text-white bg-dark" style="width: 18rem;">
+                    <div class="mx-auto card text-white bg-dark" style="width: 18rem;">
                         <div class="card-body">
                             <h3 class="card-title header-txt">Drone Levels</h3>
                             <p class="card-text">We offer different classes of drones to suit the price range of all our clients. See what we have to offer you.</p>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col mt-4 mb-4">
-                    <div class="card text-white bg-dark" style="width: 18rem;">
+                    <div class="mx-auto card text-white bg-dark" style="width: 18rem;">
                         <div class="card-body">
                             <h3 class="card-title header-txt">Drone FAQ</h3>
                             <p class="card-text">So you've browsed our entire website but you still have questions. Skip to SKAI's most commonly asked questions.</p>
