--- a/skai/index.html
+++ b/skai/index.html
@@ -35,7 +35,7 @@
                 <div class="overlay-content header-txt">
                     <a href="#">ABOUT</a>
                     <a href="#">DRONES</a>
-                    <a href="#">FLIGHTS</a>
+                    <a href="flights.html">FLIGHTS</a>
                     <a href="#">SKAI LIVE</a>
                     <a href="#">FAQ</a>
                     <a href="#">SIGN IN</a>
@@ -45,7 +45,7 @@
         </div>
 
         <!-- Use any element to open/show the overlay navigation menu -->
-        <span onclick="openNav()" class="header-txt">MENU</span>
+        <span onclick="openNav()" class="header-txt btn">MENU</span>
     </div>
 
     <div class="container-fluid full-width" style="height: 600px;">
