--- a/skai/index.html
+++ b/skai/index.html
@@ -4,7 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Six+Caps" rel="stylesheet">
@@ -12,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>SKAI : Passenger Drone Travel</title>
+    <title>SKAI : Passenger Drone Rides</title>
 </head>
 <body>
 <div class="container-fluid big-banner full-width">
@@ -33,12 +39,13 @@
             <!-- Overlay content -->
             <div class="container">
                 <div class="overlay-content header-txt">
-                    <a href="#">ABOUT</a>
+                    <a href="#" class="btn disabled">HOME</a>
+                    <a href="about.html">ABOUT</a>
                     <a href="#">DRONES</a>
                     <a href="flights.html">FLIGHTS</a>
                     <a href="#">SKAI LIVE</a>
                     <a href="#">FAQ</a>
-                    <a href="#">SIGN IN</a>
+                    <a href="signin.html">SIGN IN</a>
                 </div>
             </div>
 
@@ -120,31 +127,39 @@
                 </div>
             </div>
         </div>
-    <div class="container-fluid header pb-2">
-        <div class="row footer">
-            <div class="col-sm text-center pt-4">
-                <ul class="list-inline">
-                    <li class="text-uppercase">Links</li>
-                    <li><a href="#" class="footer-links">About</a></li>
-                    <li><a href="#" class="footer-links">Drones</a></li>
-                    <li><a href="#" class="footer-links">Flights</a></li>
-                    <li><a href="#" class="footer-links">SKAI Live</a></li>
-                    <li><a href="#" class="footer-links">FAQ</a></li>
-                    <li><a href="#" class="footer-links">Sign In</a></li>
-                </ul>
-            </div>
-            <div class="col-sm text-center">
-                <img src="img/logos/home-logo.svg" alt="Home Logo" class="home-logo mt-4 mb-4">
-            </div>
-            <div class="col-sm text-center">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-            </div>
+    <div class="container-fluid header pb-2 footer">
+        <div class="row footer justify-content-center">
+            <img src="img/logos/home-logo.svg" alt="Home Logo" class="home-logo mt-4">
+        </div>
+        <div class="row footer justify-content-center">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-youtube"></a>
+        </div>
+        <div class="text-center footer">
+            <p class="text-uppercase">
+                <a href="#" class="footer-links btn disabled p-0 disabled-links">Links</a>
+                &nbsp; | &nbsp;
+                <a href="index.html" class="footer-links btn disabled p-0 disabled-color">Home</a>
+                &nbsp; | &nbsp;
+                <a href="about.html" class="footer-links">About</a>
+                &nbsp; | &nbsp;
+                <a href="#" class="footer-links">Drones</a>
+                &nbsp; | &nbsp;
+                <a href="flights.html" class="footer-links">Flights</a>
+                &nbsp; | &nbsp;
+                <a href="#" class="footer-links">SKAI Live</a>
+                &nbsp; | &nbsp;
+                <a href="#" class="footer-links">FAQ</a>
+                &nbsp; | &nbsp;
+                <a href="signin.html" class="footer-links">Sign In</a>
+            </p>
         </div>
     </div>
-
+    <div class="row footer justify-content-center cpyrt-color">
+        <p class="copyright pt-2"> COPYRIGHT BY KAT SANCHEZ  &nbsp; | &nbsp;  FALL 2019  &nbsp; | &nbsp;  MCTC WEBI2023</p>
+    </div>
 </div>
 
 
